name:                syntax-example-json
version:             0.1.0.0
synopsis:            Example JSON parser/pretty-printer.
-- description:         
license:             MIT
license-file:        LICENSE
author:              Paweł Nowak
maintainer:          Paweł Nowak <pawel834@gmail.com>
copyright:           Paweł Nowak 2014
category:            Data
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git@github.com:Pawel834/syntax-example-json.git

executable syntax-example-json
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base <5, semi-iso >= 0.5, syntax >= 0.3, syntax-attoparsec, syntax-pretty,
                       containers, text, scientific, lens, pretty, attoparsec
  ghc-options:         -rtsopts -prof -fprof-auto